src/test/ui/const-generics/const-generic-default-wont-borrowck.stderr
error[E0381]: binding `*s` isn't initialized
  --> $DIR/const-generic-default-wont-borrowck.rs:2:26
   |
LL |     let s: &'static str; s.len()
   |         -                ^^^^^^^ `*s` borrowed here but it isn't initialized
   |         |
   |         variable declared here

error: aborting due to previous error

For more information about this error, try `rustc --explain E0381`.
